added email and reset password

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -23,5 +23,6 @@
         <p>{{ form.submit() }}</p>
     </form>
     <p>New User?<a href="{{ url_for('register') }}">Click to Register</a></p>
+    <p>Forgot Your Password? <a href="{{ url_for('reset_password_request') }}">Reset Password</a></p>
 
 {% endblock %}
