--- a/app/templates/new_request.html
+++ b/app/templates/new_request.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
 
 <form action="" method="post">
     {{ form.hidden_tag() }}
