--- a/app/templates/request.html
+++ b/app/templates/request.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block content %}
+{% block app_content %}
 
 <h1>{{ req.title }}</h1>
 <span>{{ req.author }},  {{ req.timestamp }}</span>
