--- a/app/templates/user.html
+++ b/app/templates/user.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{%  block content %}
+{%  block app_content %}
     <script type="text/javascript">
 //populate the checkboxes for requests
 $(function () {
