--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,40 +1,96 @@
 <html>
+
 <script type="text/javascript"
   src="http://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script type="text/javascript">
   var $SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
 </script>
-    <head>
-        {% if title %}
-        <title>{{ title }}</title>
-        {% else %}
-        <title> </title>
-        {% endif %}
-    </head>
-    <body>
-        <div>SAAC:
-            <a href="{{ url_for('index') }}">Home</a>
-            {%  if current_user.is_anonymous %}
-                <a href="{{ url_for('login') }}">Login</a>
-            {% else %}
-                <a href="{{ url_for('request_list') }}">Help Others</a>
-                <a href="{{ url_for('new_request') }}">New Request</a>
-                <a href="{{ url_for('account', name=current_user.name) }}">Account</a>
-                <a href="{{ url_for('logout') }}">Logout</a>
-            {% endif %}
-        </div>
-        <hr>
+
+{% extends 'bootstrap/base.html' %}
+
+    {% block title %}
+        {% if title %}{{ title }}{% else %}SAAC{% endif %}
+    {% endblock %}
+
+    {% block navbar %}
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                 <!-- Brand and toggle get grouped for better mobile display -->
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="{{ url_for('index') }}">Home</a>
+                </div>
+                <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+{#                    <ul class="nav navbar-nav">#}
+{#                        <li><a href="{{ url_for('index') }}">Home</a></li>#}
+{#                    </ul>#}
+                    <ul class="nav navbar-nav navbar-right">
+                        {% if current_user.is_anonymous %}
+                        <li><a href="{{ url_for('login') }}">Login</a></li>
+                        {% else %}
+                        <li><a href="{{ url_for('account', name=current_user.name) }}">Account</a></li>
+                        <li><a href="{{ url_for('new_request') }}">New Request</a></li>
+                        <li><a href="{{ url_for('request_list') }}">Help Others</a></li>
+                        <li><a href="{{ url_for('logout') }}">Logout</a></li>
+                        {% endif %}
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    {% endblock %}
+
+    {% block content %}
+        <div class="container">
         {% with messages = get_flashed_messages() %}
         {% if messages %}
-        <ul>
             {% for message in messages %}
-            <li>{{ message }}</li>
+            <div class="alert alert-info" role="alert">{{ message }}</div>
             {% endfor %}
-        </ul>
         {% endif %}
         {% endwith %}
 
-        {% block content %} {% endblock %}
+        {# application content needs to be provided in the app_content block #}
+        {% block app_content %}{% endblock %}
+    </div>
+    {% endblock %}
 
-    </body>
+
+{##}
+{##}
+{##}
+{##}
+{##}
+{#    <body>#}
+{#        <div>SAAC:#}
+{#            <a href="{{ url_for('index') }}">Home</a>#}
+{#            {%  if current_user.is_anonymous %}#}
+{#                <a href="{{ url_for('login') }}">Login</a>#}
+{#            {% else %}#}
+{#                <a href="{{ url_for('request_list') }}">Help Others</a>#}
+{#                <a href="{{ url_for('new_request') }}">New Request</a>#}
+{#                <a href="{{ url_for('account', name=current_user.name) }}">Account</a>#}
+{#                <a href="{{ url_for('logout') }}">Logout</a>#}
+{#            {% endif %}#}
+{#        </div>#}
+{#        <hr>#}
+{#        {% with messages = get_flashed_messages() %}#}
+{#        {% if messages %}#}
+{#        <ul>#}
+{#            {% for message in messages %}#}
+{#            <li>{{ message }}</li>#}
+{#            {% endfor %}#}
+{#        </ul>#}
+{#        {% endif %}#}
+{#        {% endwith %}#}
+{##}
+{#        {% block app_content %} {% endblock %}#}
+{##}
+{#    </body>#}
+
+
 </html>
