Added 'demand' for sorting requests, updated db relationships, fixed response bug, more face-lift

--- a/app/templates/expertise.html
+++ b/app/templates/expertise.html
@@ -68,28 +68,30 @@ $(function () {
 });
 
 </script>
+    <div class="container">
+        <div class="col-md-12">
+            <h2>Please select the areas you feel comfortable helping in</h2>
 
-    <form action="" method="post">
+            <form action="" method="post">
 
-        <p>
-            <select id="dynamic"></select>
+                <p>
+                    <select id="dynamic"></select>
 
-            <select id="level">
-                <option value="100">100 Level</option>
-                <option value="200">200 Level</option>
-                <option value="300">300 Level</option>
-                <option value="400">400 Level</option>
-            </select>
-             <button type="button" id="add">Add</button>
-        </p>
-        <p>
-            <select id="current"></select>
-            <button type="button" id="remove">Remove</button>
-        </p>
+                    <select id="level">
+                        <option value="100">100 Level</option>
+                        <option value="200">200 Level</option>
+                        <option value="300">300 Level</option>
+                        <option value="400">400 Level</option>
+                    </select>
+                    <button type="button" id="add">Add</button>
+                </p>
+                <p>
+                    <select id="current"></select>
+                    <button type="button" id="remove">Remove</button>
+                </p>
 
-        <p><button type="button" id="submit">Submit</button> </p>
-
-    </form>
-
-
+                <p><button type="button" id="submit">Submit</button> </p>
+            </form>
+        </div>
+    </div>
 {% endblock %}
